<resources>
    <!--App strings-->
    <string name="app_name">CODAssistant</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_matches">My Matches</string>
    <string name="menu_my_stats">My Stats</string>
    <string name="menu_pro_rosters">CDL Rosters</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title">COD Assistant</string>
    <string name="subtitle">Ranked Stat Tracking | Latest CDL Info</string>
    <!--App Description Strings-->
    <string name="fabDescCal">After selecting an event, add it your calendar</string>
    <string name="fabDescAdd">Add a match to your Vanguard matches</string>

    <!--Match/Stats Strings -->
    <string name="map">Map:</string>
    <string name="mode">Game\nMode:</string>
    <string name="tuscan" translatable="false">Tuscan</string>
    <string name="bocage" translatable="false">Bocage</string>
    <string name="ds" translatable="false">Desert Siege</string>
    <string name="gav" translatable="false">Gavutu</string>
    <string name="berlin" translatable="false">Berlin</string>
    <string name="hp" translatable="false">Hardpoint</string>
    <string name="snd">Search and Destroy</string>
    <string name="ctl" translatable="false">Control</string>
    <string name="teamPoints">Team\nPoints:</string>
    <string name="oppPoints">Opponent\nPoints:</string>
    <string name="elims">Eliminations:</string>
    <string name="deaths">Deaths:</string>
    <string name="obj">Objectives:</string>
    <string name="addMatch">Add Match</string>
    <string name="updateMatch">Update Match</string>
    <string name="matchInstructs">Add, edit and delete Ranked Vanguard matches.</string>
    <string name="secs">sec</string>
    <string name="plants">plants</string>
    <string name="winLoss">Win / Loss:</string>
    <string name="totalElimsDeaths">Total Elims / Deaths:</string>
    <string name="avElimsDeaths">Average Elims / Deaths:</string>
    <string name="avObj">Average Objectives:</string>
    <string name="smsButt">SMS</string>
    <string name="emailButt">Email</string>
    <!--Match/Stats Description Strings-->
    <string name="matchRecyclerDesc">List of your inputted Vanguard matches</string>
    <string name="deleteMatchDesc">Deletes the selected match from your Vanguard matches list</string>
    <string name="editMatchDesc">Opens edit screen for the selected match from your Vanguard matches list</string>
    <string name="mapRadioGroupDesc">Select one of the five Vanguard competitive maps</string>
    <string name="modeRadioGroupDesc">Select one of the 3 Vanguard competitive modes</string>
    <string name="inputMatchDesc">Input this match and its current details</string>
    <string name="statsCardDesc">Displays Vanguard stats with selected stat filter from settings</string>
    <string name="smsButtDesc">SMS your stats to whoever or the phone number set in settings</string>
    <string name="emailButtDesc">Email your stats to whoever or the email set in settings</string>

    <!-- Preference Strings -->
    <string name="prefs_header">Preferences</string>
    <string name="filter_header">Stats Filter</string>
    <string name="contactInfo">Contact Info</string>
    <string name="language">Language</string>
    <string name="gamemode">Game Mode</string>
    <string name="fontSize">Font Size</string>
    <string name="defaultVal">Default</string>
    <string name="largeVal">Large</string>
    <string name="overall">Overall</string>

    <!-- View pager Strings -->
    <string name="cdlRosters">CDL Pro Rosters</string>
    <!--View Pager Description Strings-->
    <string name="pagerDescription">List of CDL pro teams and their rosters</string>
    <string name="webClickDesc">Opens the current teams website</string>

    <!-- Credit's Strings -->
    <string name="creators">COD Assistant Creators</string>
    <string name="apiData">CDL Roster API Data</string>
    <string name="codVangImage">COD: Vanguard Image</string>
    <!--Credit's Description Strings-->
    <string name="creditsRecyclerDesc">List of source references</string>

    <!-- Home Page Strings-->
    <string name="home_desc">A mobile Call of Duty assistant application to track ranked statistics and centralize all Call of Duty League information such as team information, event details and more.</string>
    <string name="home_matches">COD Assistant allows you to do all of the following when dealing with matches.</string>
    <string name="home_create">Create\nmatches</string>
    <string name="home_edit">Edit\nmatches</string>
    <string name="home_delete">Delete\nmatches</string>
    <string name="home_statsTitle">Statistics</string>
    <string name="home_statsDesc">Go through all matches and show match statistics such as total and average eliminations, deaths, and objectives.</string>
    <string name="home_eventsTitle">Events</string>
    <string name="home_event1">Kickoff Classic (Jan. 31- Feb. 2) -\nWINNER: Toronto Ultra</string>
    <string name="home_event2">OpTic Major 1 (Mar. 6- Mar. 6) -\nWINNER: OpTic Texas</string>
    <string name="home_event3">RØKKR Major 2 (Mar. 31- April 3) -\nWINNER: Los Angeles Guerillas</string>
    <string name="home_event4">Ultra Major 3 (June 2 - June 5) -\nWINNER: TBD</string>
    <string name="home_event5">Subliners Major 4 (July 21 - July 24) -\nWINNER: TBD</string>
    <string name="home_event6">COD: Vanguard Champs (Aug. 19 - Aug. 22) -\nWINNER: TBD</string>
    <string name="intentInsertEvent4" translatable="false">Ultra Major 3</string>
    <string name="intentInsertEvent5" translatable="false">Subliners Major 4</string>
    <string name="intentInsertEvent6" translatable="false">COD: Vanguard Champs</string>
    <string name="tbd">TBD</string>
    <string name="home_buttText">Save Event</string>
    <string name="home_matchesTitle">Matches</string>
    <!-- Home Page Description Strings-->
    <string name="home_app_icon">COD Assistant Application Icon</string>
    <string name="home_divider">Content Divider</string>
    <string name="home_create_matches">Create Match Icon</string>
    <string name="home_edit_matches">Edit Match Icon</string>
    <string name="home_delete_matches">Delete Match Icon</string>
    <string name="eventClick">Selects this event</string>
</resources>