<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_matches"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/menu_my_matches" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_baseline_query_stats_24"
            android:title="@string/menu_my_stats" />
        <item
            android:id="@+id/nav_rosters"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_pro_rosters" />
    </group>
</menu>