<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:useDefaultMargins="true"
        tools:context=".Database.CreateUpdateFragment">

        <TextView
            android:id="@+id/mapLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/mapInput"
            android:textSize="18sp"
            android:text="@string/map"
            android:paddingTop="10dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:id="@+id/mapInput">

            <RadioButton
                android:id="@+id/tuscanRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuscan" />
            <RadioButton
                android:id="@+id/bocageRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bocage" />
            <RadioButton
                android:id="@+id/berlinRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/berlin" />
            <RadioButton
                android:id="@+id/dsRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ds" />
            <RadioButton
                android:id="@+id/gavutuRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gav" />
        </RadioGroup>

        <TextView
            android:id="@+id/modeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/modeInput"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:text="@string/mode" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:id="@+id/modeInput">

            <RadioButton
                android:id="@+id/hpRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp" />
            <RadioButton
                android:id="@+id/sndRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snd" />
            <RadioButton
                android:id="@+id/cntrlRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ctl" />
        </RadioGroup>

        <TextView
            android:id="@+id/teamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/teamPoints"
            android:text="@string/teamPoints"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/teamPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:minHeight="48dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/oppPointsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/oppPoints"
            android:text="@string/oppPoints"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/oppPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:minHeight="48dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/elimsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/elimAmt"
            android:text="@string/elims"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/elimAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:minHeight="48dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/deathLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/deathAmt"
            android:text="@string/deaths"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/deathAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:minHeight="48dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/objLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/deathAmt"
            android:text="@string/obj"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/objAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:minHeight="48dp"
            android:inputType="number" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/addMatch" />
    </GridLayout>
</ScrollView>