<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/matches_color"
        android:orientation="vertical"
        app:cardCornerRadius="15dp"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/filterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overall"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:paddingBottom="15dp"/>

            <ImageView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_divider"
                android:src="@drawable/home_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filterName"
                android:paddingBottom="15dp"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/winLossTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winLoss"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/winLoss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:textAlignment="center"
                android:text="50/34          1.2W/L"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/winLossTitle"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/totalStatsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalElimsDeaths"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/winLoss"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/totalStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="133/121         2.0KD"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/totalStatsTitle"
                android:paddingBottom="30dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/averageStatsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avElimsDeaths"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/totalStats"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/averageStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="43/32         2.0KD"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/averageStatsTitle"
                android:paddingBottom="30dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/averageObjTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avObj"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/averageStats"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/objStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="40 sec     1 plants     5 obj kills"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/averageObjTitle"
                android:paddingBottom="30dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>